# dosbarthiad

./: .gitignore  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
src/dosbarthiad/: __init__.py  _sample_data.py  clean.py  cluster.py  dimensionreduction.py  predict.py
tests/: test_clean.py  test_cluster.py  test_dimensions.py  test_predict.py  test_sample_data.py
